notebook for task A modified

--- a/src/daneel/detection/Simple_Transmission.ipynb
+++ b/src/daneel/detection/Simple_Transmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# adjusted: Save forward model parameters to .txt file\n",
+    "parameters_output_path = '/ca24/AstroCode-Collective/HD_209458_b_assignment3_taskA_parameters.txt'\n",
+    "forward_model_parameters = \"\"\"\n",
+    "Planetary Parameters:\n",
+    "- Planet Name: HD 209458 b\n",
+    "- Atmospheric Composition: H2O, CH4, CO2, CO (randomized abundances [10^-8, 10^-2])\n",
+    "- Planetary Radius: 1.36 R_J\n",
+    "- Semi-major Axis: 0.047 AU\n",
+    "- Temperature: 1400 K\n",
+    "\n",
+    "Stellar Parameters:\n",
+    "- Stellar Radius: 1.146 R_sun\n",
+    "- Stellar Temperature: 6091 K\n",
+    "- Stellar Luminosity: 1.62 L_sun\n",
+    "\n",
+    "TauREx Simulation Details:\n",
+    "- Forward Model: Transmission Spectrum\n",
+    "- Wavelength Range: 0.3 - 5 microns\n",
+    "- Resolution: 300\n",
+    "\"\"\"\n",
+    "with open(parameters_output_path, 'w') as f:\n",
+    "    f.write(forward_model_parameters)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -237,8 +268,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "acc_env",
+   "language": "python",
+   "name": "acc_env"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
