modified .dat task A

--- a/src/daneel/detection/Simple_Transmission.ipynb
+++ b/src/daneel/detection/Simple_Transmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +175,7 @@
    ],
    "source": [
     "import h5py\n",
+    "import numpy as np\n",
     "\n",
     "file_path = '/ca24/AstroCode-Collective/src/daneel/detection/Simple_Transmission.h5'\n",
     "\n",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +258,38 @@
     "\"\"\"\n",
     "with open(parameters_output_path, 'w') as f:\n",
     "    f.write(forward_model_parameters)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spectrum data saved to: /ca24/AstroCode-Collective/HD_209458_b_assignment3_taskA_spectrum.dat\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate error as sqrt((Rp/Rs)^2)\n",
+    "error = np.sqrt(spectrum)\n",
+    "\n",
+    "# Combine wavelength, spectrum, and error into a single array\n",
+    "data = np.column_stack((wavelength, spectrum, error))\n",
+    "\n",
+    "# Save to a .dat file\n",
+    "dat_file_path = '/ca24/AstroCode-Collective/HD_209458_b_assignment3_taskA_spectrum.dat'\n",
+    "np.savetxt(\n",
+    "    dat_file_path,\n",
+    "    data,\n",
+    "    header=\"Wavelength(microns)  (Rp/Rs)^2  Error\",\n",
+    "    fmt=\"%.6e\"\n",
+    ")\n",
+    "\n",
+    "print(f\"Spectrum data saved to: {dat_file_path}\")\n"
    ]
   },
   {
