Assignment3 TaskA .dat file update

--- a/src/daneel/detection/Simple_Transmission.ipynb
+++ b/src/daneel/detection/Simple_Transmission.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
     "new_error = np.full_like(error, np.std(transit_depth))  # Replace with your specific modification\n",
     "\n",
     "# Combine the data back\n",
-    "updated_data = np.column_stack((wavelength, transit_depth, new_error, binning))\n",
+    "updated_data = np.column_stack((wavelength, transit_depth, new_error))\n",
     "\n",
     "# Save the updated data to a new file\n",
     "np.savetxt(output_file, updated_data, fmt=\"%.6f\", comments=\"\") #, header=\"wavelength transit_depth error binning\",\n"
